<?xml version="1.0" encoding="utf-8"?>
<resources>

 
    <string name="hello_world">Hello world!</string>

    <string name="app_name">二秋专用1.0</string>
    <string name="forget">忘记密码？</string>
    <string name="version">1.0</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="code">密码</string>
    <string name="account">账户</string>
    <string name="Login_Loding">登录中</string>
    <string name="Login_Account_Empty">請輸入用戶名</string>
    <string name="Login_Password_Empty">請輸入密碼</string>
    <string name="app_NetworkError">網絡連接錯誤</string>    
    <string name="Login_AccountDoesNotExist">用户不存在或密码错误</string>
    <string name="Login_Failure">登录失败</string>
    <string name="app_Loding">Loading...</string>

    
</resources>
