<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color_ActivityBackground" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart"
        android:src="@drawable/login_top_background" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitEnd"
        android:src="@drawable/login_bottom_background" />

    <TextView
        android:id="@+id/Version_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/version" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter" />

            <ImageView
                android:id="@+id/Title_ImageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/title" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/Account_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:hint="@string/account"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/Password_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:hint="@string/code"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingTop="10dp"
                android:textSize="14dp" />

            <Button
                android:id="@+id/Login_Bitton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="#3366cc"
                android:padding="8dp"
                android:text="@string/login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/Register_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="#ffffff"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/regist" />

                <TextView
                    android:id="@+id/ForgotPassword_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/Register_TextView"
                    android:layout_alignParentRight="true"
                    android:text="@string/forget" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:gravity="bottom" >

                <ImageView
                    android:id="@+id/QQLogin_ImageView"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_alignParentLeft="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/qq" />

                <ImageView
                    android:id="@+id/WeChatLogin_ImageView"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/weixin" />

                <ImageView
                    android:id="@+id/SinaLogin_ImageView"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/weibo" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>